Fix T48717: Modal operators called from Py omit reports from the UI